# woodtapper

./: .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml
.github/workflows/: ci.yaml  deploy_docs.yaml  deploy_on_pypi.yaml  deploy_on_pypitest.yaml  draft-pdf.yml
0_tutorials/: index.html
1_tutorials/: index.html
2_tutorials_example_exp/: index.html
data/: data.py
docs/: 0_tutorials.md  1_tutorials.md  2_tutorials_example_exp.md  index.md  installation.md
docs/references/: classification_explanation.md  classification_extractors.md  example-explanation.md  extractors.md  mixin.md  mixin_explanation.md  regression_explanation.md  regression_extractors.md
example_sampling/: explanation.py
extract_rules/: base.py  building_extractors.py  extractors.py  setup.py  utils.py  visualization.py
extract_rules/Splitter/: _QuantileSplitter.pyx
installation/: index.html
javascripts/: mathjax-config.js
notebooks/: example.ipynb  explanation_by_example.ipynb  rules_extraction.ipynb  text.ipynb
paper/: README.md  exp_py.ipynb  exp_r.ipynb  paper.bib  paper.md  refs.bib  timing-exampleSampling-with-skgrf-plot.ipynb  timing-skgrf.ipynb
paper/timing/: README.md  time-plot-sirus-joss.ipynb  timing-exampleSampling-with-skgrf-plot.ipynb  timing-sirus-julia.jl  timing-sirus-python.py  timing-sirus-r.R  timing-skgrf.ipynb
paper/timing/times-csv/: list_GrowForest_dims_julia.csv  list_GrowForest_dims_python.csv  list_GrowForest_dims_r.csv  list_GrowForest_samples_julia.csv  list_GrowForest_samples_python.csv  list_GrowForest_samples_r.csv  list_RulesExtraction_dims_julia.csv  list_RulesExtraction_dims_python.csv  list_RulesExtraction_dims_r.csv  list_RulesExtraction_samples_julia.csv  list_RulesExtraction_samples_python.csv  list_RulesExtraction_samples_r.csv  (+6 more)
pysirus/models/: _QuantilePartitioner.pyx  _QuantileSplitter.c  _QuantileSplitter.pyx  base.py  basic.py  extractors.py  optimizer.py  setup.py  test.txt
references/classification_explanation/: index.html
references/classification_extractors/: index.html
references/mixin/: index.html
references/mixin_explanation/: index.html
references/regression_explanation/: index.html
references/regression_extractors/: index.html
rules/: base.py  extractors.py  optimizer.py  setup.py
tests/: conftest.py  integration_tests.py  test_integration_explanation.py  test_integration_extractor.py  test_unit_extractor.py  test_utils.py  unit_tests.py
woodtapper/: __init__.py
woodtapper/example_sampling/: __init__.py  base.py  classification_explanation.py  explanation.py  regression_explanation.py
woodtapper/extract_rules/: __init__.py  base.py  classification_extractors.py  extractors.py  regression_extractors.py  utils.py  visualization.py
(+2 files in other folders)
