[build-system]
requires = ["setuptools>=42", "wheel", "Cython>=3.1.2","numpy","scikit-learn>=1.6.1" ]
build-backend = "setuptools.build_meta"

[project]
name = "woodtapper"
authors = [
    {name = "Abdoulaye SAKHO", email = "abdoulaye.sakho@artefact.com"}
]
version = "0.0.2"
description = "A Python toolbox for interpretable and explainable tree ensembles."
readme = "README.md"
license = "MIT"
keywords = ["woodtapper", "interpretable ML", "tree-based models", "Cython"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development"
]
requires-python = ">=3.12,<3.13"

[project.urls]
"Homepage" = "https://github.com/artefactory/woodtapper"
"Repository" = "https://github.com/artefactory/woodtapper"


[project.optional-dependencies]
dev = ["cython"]
